# grcuda

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  NOTES.md  README.md  RESULTS.md  install.sh  notes.md  setup_machine_from_scratch.sh
data/nvprof_log/2020_07_20/: b1_31343.csv  b5_808.csv  b6_1989.csv  b7_2663.csv  b8_10958.csv  summary.csv
data/pickle/: graph_1000  graph_10000  graph_100000
demos/image_pipeline_local/: .gitignore  array_copy_performance_test.js  cuda_kernels.js  image_pipeline.js  image_pipeline.py
demos/image_pipeline_local/cuda/: image_pipeline.cu  image_pipeline.cuh  main.cpp  opencv_interface.cpp  opencv_interface.hpp  options.hpp  utils.hpp
demos/image_pipeline_web/: .gitignore  run_demo.sh  setup_demo.sh
demos/image_pipeline_web/backend/: package-lock.json  package.json
demos/image_pipeline_web/backend/src/: CudaKernels.ts  GrCUDAProxy.ts  index.ts  options.ts  utils.ts
demos/image_pipeline_web/frontend/: index.html
demos/image_pipeline_web/frontend/css/: style.css
demos/image_pipeline_web/frontend/images/: dataset1024  dataset512
demos/image_pipeline_web/frontend/js/: index.js  templates.js
demos/tensorrt/: README.md
demos/tensorrt/cpp/: load_and_sample.cc
docs/: bindings.md  grcuda-scheduler-architecture.md  grcuda-scheduler-results (OUTDATED).md  grcuda.md  language.md  launchkernel.md  logging.md  typemapping.md
examples/mandelbrot/: README.md  app.js  package.json
examples/tensorrt/: README.md  tensorrt_example.js
examples/tensorrt/cpp/: CMakeLists.txt
examples/tensorrt/cpp/cmake/: FindTensorRT.cmake
examples/tensorrt/data/: 6.pgm  7.pgm  download_mnist_test_digits.py
examples/tensorrt/models/: lenet5.engine  lenet5.pb  lenet5.uff
examples/tensorrt/python/: build_engine.py  load_and_sample.py  model.py
mx.grcuda/: mx_grcuda.py  suite.py
oci_setup/: .gitignore  oci_connect.sh  oci_setup_instance.py  oci_terminate_instance.sh  setup_graalvm.sh  setup_machine_from_scratch.sh
projects/com.nvidia.grcuda/: .checkstyle_checks.xml
projects/com.nvidia.grcuda.parser.antlr/: Makefile  postprocessor.py
projects/demos/image_pipeline/: array_copy_performance_test.js  cuda_kernels.js  image_pipeline.js  image_pipeline.py  package-lock.json
projects/demos/image_pipeline/cuda/: CMakeLists.txt  image_pipeline.cu  opencv_interface.cpp  opencv_interface.hpp  options.hpp  utils.hpp
projects/demos/web_demo/: README.md  setup_demo.sh
projects/demos/web_demo/backend/: package.json
projects/resources/: .gitignore
projects/resources/connection_graph/: Makefile  connection_graph.cu  run.sh
projects/resources/connection_graph/datasets/: connection_graph_1_v100.csv  connection_graph_2_v100.csv  connection_graph_4_v100.csv  connection_graph_8_v100.csv  connection_graph_test.csv
projects/resources/cuda/: Makefile  b1.cu  b1.cuh  b10.cu  b10.cuh  b10_default.cu  b10_sync.cu  b1_default.cu  b1_sync.cu  b4_default.cu  b4_sync.cu  b5.cu  b5.cuh  b5_default.cu  b5_sync.cu  b6.cu  b6.cuh  b6_default.cu  b6_sync.cu  b7.cu  b7.cuh  b7_default.cu  b7_sync.cu  b8.cu  b8.cuh  b8_default.cu  b8_sync.cu  b9_sync.cu  benchmark.cu  benchmark.cuh  dvrapi_error_string.h  main.cu  mmio.cpp  mmio.hpp  options.hpp  run_nvprof.sh  run_partitions.sh  utils.hpp
projects/resources/cuda/multi_gpu/: b1.cu  b1.cuh  b11.cu  b11.cuh  b12.cu  b12.cuh  b13.cu  b13.cuh  b5.cu  b5.cuh  b6.cu  b6.cuh  b9.cu  b9.cuh
projects/resources/cuda/old/: b10.cuh  b10_default.cu  b10_sync.cu  b1_sync.cu  b5.cuh  b6.cuh  b6_default.cu  b7.cuh  b8_default.cu  b8_sync.cu  b9.cuh  options.hpp  utils.hpp
projects/resources/cuda/other/: b1_default_nomanaged.cu  b1_sync_nomanaged.cu  b4_default.cu  b4_sync.cu  b5_default_nomanaged.cu  b5_sync_nomanaged.cu  b9_default.cu  b9_sync.cu
projects/resources/cuda/single_gpu/: b1.cu  b1.cuh  b10.cu  b10.cuh  (+8 more)
tensorrt/: CMakeLists.txt  README.md
tensorrt/app/: libtrt_load_and_sample.c
tensorrt/cpp/: CMakeLists.txt  load_and_sample.cc
tensorrt/data/: 2.pgm  3.pgm  4.pgm  5.pgm  8.pgm
tensorrt/example/: run_nodejs.sh  tensorrt_test.js
tensorrt/include/: trt.h
tensorrt/libtrt/: CMakeLists.txt
tensorrt/libtrt/app/: load_and_sample.c
tensorrt/libtrt/cmake/: FindTensorRT.cmake
tensorrt/libtrt/include/: trt.h
tensorrt/libtrt/src/: trt.cpp
tensorrt/python/: build_engine.py  model.py
tensorrt/src/: trt.cpp
(+437 files in other folders)
